# stack

./: .gitignore  pyproject.toml
pandas/: test.ipynb
