[project]
name = "stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[project.optional-dependencies]
vis = [
    "plotly>=5.24.1",
]
notebook = [
    "nbformat>=5.10.4",
    "ipykernel>=6.29.5",
]

[tool.uv]
dev-dependencies = [
    "pytest~=8.3",
    "mypy>=1.11",
    # Ruff CI version is in .gitlab-ci.yml
    "ruff==0.6.3",
    "pandas-stubs>=2.2.2.240909",
]